changed favicon to mewing amongus reposition change email and change pfp fixed alert overflowing if word is too long

--- a/frontend/public/css/components/alert.css
+++ b/frontend/public/css/components/alert.css
@@ -27,6 +27,8 @@
     font-weight: 500;
     font-size: 14px;
     flex-grow: 1; /* Allow title to grow and push close button to the side */
+	overflow: hidden;
+	text-overflow: ellipsis;
   }
   
   .alert__close {
